--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -218,7 +218,7 @@ ja:
       title_show: "%{name}の詳細"
       sign_out: ログアウト
       minimum_length: "%{length}文字以上"
-      Following: フォロー中
+      Followings: フォロー中
       Followers: フォロワー
       Unfollow: フォロー解除
       Follow: フォロー
