--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -7,7 +7,7 @@ ja:
       active_storage/blob: アクティブストレージ/ブロブ  #g
       active_storage/variant_record: アクティブ ストレージ/バリアント レコード  #g
       relationship: 関係  #g
-      report: 報告書  #g
+      report: 日報  #g
 
     attributes:
       book:
@@ -35,6 +35,7 @@ ja:
         reset_password_sent_at: パスワードリセット送信時刻  #g
         reset_password_token: パスワードリセット用トークン  #g
         uid: ウイド  #g
+        reports: レポート  #g
 
       active_storage/attachment:
         blob: :activerecord.models.blob  #g
@@ -68,3 +69,5 @@ ja:
       report:
         content: 内容  #g
         title: 題名  #g
+        created_at: 投稿日時
+        user: :activerecord.models.user  #g
